<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_CraneStatus" Id="{e4025b58-3d15-492a-853e-35df2af2b87d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CraneStatus :
(
	Error,
	Ready,
	Running,
	Stopping,
	PowerOff,
	Checking
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>