<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_StateVariables" Id="{3b3769e9-edaf-4913-b5e1-443e2d589ac8}">
    <Declaration><![CDATA[TYPE ST_StateVariables :
STRUCT
	bPower : BOOL;
	bStart : BOOL;
	bStop : BOOL;
	bRunning : BOOL := FALSE;
	bError : BOOL;
	bMode : BOOL;
	fTime : LREAL := 0.0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>